...
            ) {
                if (onBack != null) {
                    SquareIconButton(
                        PhosphorIcons.ArrowLeft,
                        strings().back,
                        onBack,
                        Modifier.testTag("top-bar-back"),
                    )
                }
                leading?.invoke()
                Text(
                    title,
                    modifier = Modifier.weight(1f).testTag("top-bar-title"),
                    fontSize = 22.sp,
                    fontWeight = FontWeight.Medium,
                    maxLines = 1,
                    overflow = TextOverflow.Ellipsis,
                    color = colors.onBackground,
                )
...
